--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -7,3 +7,5 @@
 @import "@fontsource/montserrat/600.css";
 @import "@fontsource/montserrat/700.css";
 @import "@fontsource/montserrat/800.css";
+
+@import "@fontsource/roboto-mono"
